NavBar issues fixed

--- a/tiv-app/src/styles/custom.scss
+++ b/tiv-app/src/styles/custom.scss
@@ -448,3 +448,14 @@
     padding-left: 50px;
   }
 }
+
+.doughnut-height {
+  text-align: center;
+  canvas{
+    margin: 0 auto;
+  }
+}
+
+.market-view-height {
+  max-width: 800px;
+}
