--- a/tiv-app/src/styles/custom.scss
+++ b/tiv-app/src/styles/custom.scss
@@ -1,3 +1,5 @@
+@import './form.css';
+
 #logo,
 #logo-min {
   color: #fff;
@@ -466,6 +468,17 @@
 
     .icon {
       margin: -8px 0 0 10px;
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .query-panel {
+    .card-body {
+      padding: 15px;
+    }
+    .form-group {
+      margin: 0;
     }
   }
 }
