--- a/tiv-app/src/components/options/oi-compass/styles.scss
+++ b/tiv-app/src/components/options/oi-compass/styles.scss
@@ -1,3 +1,42 @@
-.oi-graph {
-  min-height: 500px;
+.oi-compass {
+  .oi-graph {
+    min-height: 500px;
+  }
+
+  .change-in-pe-ce {
+    margin-top: 20px;
+    h4 {
+      font-size: 14px;
+    }
+    ul {
+      margin: 0;
+      padding: 0;
+      li {
+        position: relative;
+        list-style: none;
+        padding-left: 12px;
+        padding-top: 5px;
+        font-size: 12px;
+        span {
+          font-size: 16px;
+          background-color: green;
+          padding: 0 5px;
+          border-radius: 10px;
+          margin-left: 10px;
+        }
+        &::before {
+          position: absolute;
+          content: '';
+          left: 0;
+          top: 15px;
+          border: 3px solid green;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+
+  .pe-ce-oi-row {
+    margin-top: 10px;
+  }
 }
