--- a/tiv-app/src/components/options/oi-compass/styles.scss
+++ b/tiv-app/src/components/options/oi-compass/styles.scss
@@ -44,6 +44,9 @@
     display: flex;
     justify-content: end;
 
+    select {
+      width: 100px;
+    }
     button {
       width: 100px;
       min-width: auto;
